# thumbnail-api

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
.cursor/rules/: dev-lifecycle.mdc  doc-hygiene.mdc  docs-readme.mdc  ide-rules.mdc  pull-requests.mdc  python.mdc
.github/actions/setup/: action.yaml
.github/workflows/: actionlint.yaml  e2e.yaml  lint.yaml  test.yaml
docs/: README.md
docs/agents/: dev-lifecycle.md  doc-hygiene.md  ide-rules.md  local-deploy.md  pull-requests.md  python.md
docs/human/: local-runbook.md
docs/specification/: api.md  job-state-machine.md  openapi.yaml  s3-keys.md  sqs-messages.md  swagger.html
infra/: api_gateway.tf  dynamodb.tf  iam_api.tf  iam_pipeline.tf  lambda_api.tf  lambda_pipeline.tf  locals.tf  main.tf  outputs.tf  providers.tf  s3.tf  sqs.tf  variables.tf  versions.tf
scripts/: localstack-assert-clean.sh  localstack-down.sh  localstack-up.sh  package-lambda.sh  show-outputs.sh  terraform-apply.sh  test-e2e.sh  upload_watch.py
scripts/lib/: localstack.sh  prereqs.sh
src/python_template/: main.py
src/python_template/config/: main.py  types.py
src/thumbnail_api/: main.py
src/thumbnail_api/cli/: __init__.py  __main__.py  admin_status.py  download_job.py  local.py  style.py  upload_watch.py
src/thumbnail_api/config/: __init__.py  clients.py  types.py
src/thumbnail_api/handlers/: __init__.py  create_job.py  dispatcher.py  get_job.py  http.py  worker.py
src/thumbnail_api/http/: __init__.py  response.py
src/thumbnail_api/images/: __init__.py  resize.py
src/thumbnail_api/jobs/: __init__.py  rollup.py  serde.py  store.py  types.py
src/thumbnail_api/s3/: __init__.py  keys.py  operations.py
test/e2e/: conftest.py  test_dispatcher.py  test_happy_path.py  test_jobs_api.py  test_smoke.py  test_worker.py
test/integration/: test_example_integration.py
test/unit/: test_admin_status.py  test_config.py  test_create_job.py  test_dispatcher.py  test_get_job.py  test_jobs_store.py  test_resize.py  test_s3.py  test_worker.py
