[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]

[tool.basedpyright]
include = ["src/", "test/"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"


# Allow implicit string concatenation for building prompts
reportImplicitStringConcatenation = false
# Allow multiple classes to be inherited even if it's unsafe (seems to be working fine)
reportUnsafeMultipleInheritance = false
# Allow for incompletely typed external packages
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.ruff]
exclude = ["typings"]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "D100", # Missing docstring in public module
    "D101", #Missing docstring in public class
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D203", # Incorrect blank line before class
    "D213", # Multiline-summary second line
    "ERA001", # Found commented-out code
    "FLY002", # Consider f-string instead of string join
    "INP001", # File ... is part of an implicit namespace package. Add an `__init__.py`.
    "PGH003", # Use specific rule codes when ignoring type issues
    "RET505", # Unnecessary `else` after `return` statement
    "S101", # Use of `assert` detected
    "S106", # Possible hardcoded password assigned to argument: "token"
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SIM108", # Use ternary operator
    "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "T201", # `print` found
    "TD", "FIX", # all TODO comment requirements
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"test/*" = [
    "ANN201", # Missing return type annotation for public function
    "DTZ", # Timezone related
    "PLR2004", # Magic value used in comparison, consider replacing `123` with a constant variable
]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id", "input"]

[tool.pytest.ini_options]
markers = [
    "only: run only this test (used with just test-only)",
]
